# triangler-api

./: .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  prod.env  pyproject.toml  pyproject.toml.bak  requirements.txt
.github/workflows/: django.yml
docker/: entrypoint.sh
openapi/: openapi.json
src/triangle_api/: manage.py
src/triangle_api/experiments/: admin.py  api.py  models.py  tests.py  utils.py
src/triangle_api/experiments/migrations/: 0001_initial.py
src/triangle_api/experiments/tests/: test_above_p.py  test_below_p.py  test_sample_size.py
src/triangle_api/triangle_api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/triangle_api/userauth/: apps.py  urls.py  views.py
